--- a/.gitignore
+++ b/.gitignore
@@ -2,12 +2,12 @@
 !.gitignore
 !system.mhs
 
-!/SDK/HF/Snake_SW/src/io_lib/
-!/SDK/HF/Snake_SW/src/lcd_lib/
-!/SDK/HF/Snake_SW/src/
-!/pcores/
+!./SDK/HF/snake/src/io_lib/
+!./SDK/HF/snake/src/lcd_lib/
+!./SDK/HF/snake/src/
+!pcores/
 
 !/data/
-SDK/HF/Snake_SW/src/lcd_lib/lcd_lib.c
-SDK/HF/Snake_SW/src/lcd_lib/lcd_lib.c
-SDK/HF/Snake_SW/src/lcd_lib/lcd_lib.c
+SDK/HF/snake/src/lcd_lib/lcd_lib.c
+SDK/HF/snake/src/lcd_lib/lcd_lib.c
+SDK/HF/snake/src/lcd_lib/lcd_lib.c
